# machine-learning-zoomcamp-2025-capstone-2

./: .gitignore  app.py  compare.py  final_fit.py  nn_models.py  preprocess.py  pyproject.toml  readme.md  train.py
models/: chess_eval-full_data-large_model-1_epochs.onnx  chess_eval-full_data-large_model-2_epochs.onnx  chess_eval-full_data-medium_model-2_epochs.onnx  chess_eval-full_data-small_model-4_epochs.onnx  chess_eval-full_data-small_model-4_epochs.onnx.data  chess_eval-full_data-small_model-5_epochs.onnx  chess_eval-full_data-small_model-5_epochs.onnx.data  chess_eval-small_data-small_model-1_epochs.onnx  chess_eval-small_data-small_model-1_epochs.onnx.data  chess_eval-small_data-small_model.onnx  chess_eval-small_data-small_model.onnx.data
notebooks/: 01_data_preparation.ipynb  02_model_training.ipynb  98_kind_of_play_.ipynb  99_test.ipynb
src/: app.py  chess_trainer.py  compare.py  final_fit.py  nn_models.py  play.py  preprocessing.py  topN.py
